--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/cabecalho.css">
     <link rel="stylesheet" href="./assets/css/destaque.css">
+    <link rel="stylesheet" href="./assets/css/geral-prods.css">
+    <link rel="stylesheet" href="./assets/css/contato.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <title>GeekStore</title>
   </head>
 
@@ -20,7 +23,7 @@
       <nav class="menu">
         <div class="logo-busca">
           <div class="logo">
-            <img src="assets\img\logo.png" alt="logo" />
+            <img src="assets\img\logo.svg" alt="logo" />
             <p class="logo-azul">Geek</p>
             <p>Store</p>
           </div>
@@ -46,9 +49,9 @@
 
     <section class="destaque">
       <div class="banner">
-        <h1>Abril Promocional</h1>
-        <h4>Produtos selecionados com 33% de desconto</h4>
-        <button>Ver Consoles</button>
+        <h1 class="banner__h1">Dezembro Promocional</h1>
+        <h4 class="banner__h4">Produtos selecionados com 33% de desconto</h4>
+        <button class="banner__btn">Ver Consoles</button>
       </div>
     </section>
     <!--destaque-->
@@ -68,7 +71,7 @@
             <img src="assets\img\canecasw.png" alt="caneca" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href=""  class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -76,7 +79,7 @@
             <img src="assets\img\legosw.png" alt="lego" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -84,7 +87,7 @@
             <img src="assets\img\yoda.png" alt="yoda" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -92,7 +95,7 @@
             <img src="assets\img\stormtropper.png" alt="storm" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -100,7 +103,7 @@
             <img src="assets\img\babyyoda.png" alt="byoda" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -108,7 +111,7 @@
             <img src="assets\img\mandalorian.png" alt="mandalorian" />
             <p class="descrição">Produto xyz</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
       </section>
@@ -127,7 +130,7 @@
             <img src="assets\img\jsxbox.png" alt="xbox" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -135,7 +138,7 @@
             <img src="assets\img\ps5.png" alt="ps5" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -143,7 +146,7 @@
             <img src="assets\img\snes.png" alt="snes" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -151,7 +154,7 @@
             <img src="assets\img\switch.png" alt="switch" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -159,7 +162,7 @@
             <img src="assets\img\console.png" alt="console" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -167,7 +170,7 @@
             <img src="assets\img\gba.png" alt="gba" />
             <p class="descrição">Console XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
       </section>
@@ -187,7 +190,7 @@
             <img src="assets\img\atari.png" alt="atari" />
             <p class="descrição">Camiseta Atari</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -195,7 +198,7 @@
             <img src="assets\img\camisasnes.png" alt="csnes" />
             <p class="descrição">Camiseta Snes</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -203,7 +206,7 @@
             <img src="assets\img\sonic.png" alt="sonic" />
             <p class="descrição">Sonic XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -211,7 +214,7 @@
             <img src="assets\img\relogio.png" alt="relogio" />
             <p class="descrição">Despertador XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -219,7 +222,7 @@
             <img src="assets\img\vr.png" alt="vr" />
             <p class="descrição">VR XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
         <div class="prod-holder">
@@ -227,7 +230,7 @@
             <img src="assets\img\pikachu.png" alt="Pikachu" />
             <p class="descrição">Pikachu XYZ</p>
             <p class="preco">60,00</p>
-            <a href="">Ver Produto</a>
+            <a href="" class="ver-prod">Ver Produto</a>
           </div>
         </div>
       </section>
@@ -236,9 +239,9 @@
 
     <section class="contato">
       <div class="referencia">
-        <img src="assets\img\logo.png" alt="logo" />
-        <p>Alura</p>
-        <p>Geek</p>
+        <img src="assets\img\logo.svg" alt="logo" />
+        <p class="referencia__p1">Alura</p>
+        <p class="referencia__p2">Geek</p>
       </div>
       <div class="links-uteis">
         <a href="">Quem somos nós</a>
@@ -250,37 +253,27 @@
       </div>
 
       <div class="form">
-        <p>Fale conosco</p>
+        <p class="form__titulo">Fale conosco</p>
+
         <div class="label-float">
           <input
             type="text"
             name="Nome"
             id="Nome"
             class="input-nome"
-            placeholder=""
-          />
-          <label for="Nome" class="label-nome">Nome</label>
+            placeholder="Digite seu nome:"/>
         </div>
-        <textarea
-          name="mensagem"
-          id="msg"
-          cols="5"
-          rows="5"
-          placeholder="Escreva sua Mensagem"
-        ></textarea>
-        <button>Enviar Mensagem</button>
+
+        <textarea name="mensagem" id="msg" class="text-msg" placeholder="Digite sua mensagem:"></textarea>
+
+        <button class="form__btn">Enviar Mensagem</button>
       </div>
+      <!--form-->
     </section>
     <!-- contato-->
 
-    <footer>
-      <div class="footer">
-        <p>©2022 Todos os direitos reservados.</p>
-        <div class="social">
-          <img src="assets\img\facebook.png" alt="facebook" />
-          <img src="assets\img\instagram.png" alt="instagram" />
-          <img src="assets\img\twitter.png" alt="twitter" />
-        </div>
-      </div>
+    <footer class="footer">
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/rafael-alesson" class="autor">Rafa Alesson</a></p>
+    </footer>
   </body>
 </html>
