finalização da home da versão mobile

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="prod-holder">
           <div class="produto">
             <img src="assets\img\atari.png" alt="atari" />
-            <p class="descrição">Camiseta Atari</p>
+            <p class="descrição">Camiseta Ataari</p>
             <p class="preco">60,00</p>
             <a href="" class="ver-prod">Ver Produto</a>
           </div>
