ajustando uns detalhes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="destaque">
       <div class="banner">
         <h1 class="banner__h1">Dezembro Promocional</h1>
-        <h4 class="banner__h4">Produtos selecionados com 33% de desconto</h4>
+        <p class="banner__p">Produtos selecionados com 33% de desconto</p>
         <button class="banner__btn">Ver Consoles</button>
       </div>
     </section>
