modifiquei uma imagem

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--login-->
 
         <div class="busca">
-          <img src="./assets/img/lupa.png" alt="lupa" />
+          <img src="./assets/img/lupa.svg" alt="lupa" />
         </div>
         <!--busca-->
       </nav>
