adição de imagens svg

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <div class="banner">
         <h1 class="banner__h1">Dezembro Promocional</h1>
         <p class="banner__p">Produtos selecionados com 33% de desconto</p>
-        <button class="banner__btn">Ver Consoles</button>
+        <a href="#console">
+          <button class="banner__btn">Ver Consoles</button>
+        </a>
       </div>
     </section>
     <!--destaque-->
@@ -62,7 +64,7 @@
           <p>Star Wars</p>
         </div>
         <div class="mostrar-mais">
-          <p>Ver Tudo <img src="assets\img\Vector.png" alt="seta" /></p>
+          <p>Ver Tudo <img src="assets\img\seta.svg" alt="seta" /></p>
         </div>
       </div>
       <section class="sessao-produtos">
@@ -118,10 +120,10 @@
 
       <div class="prod-titulo">
         <div class="titulo">
-          <p>Consoles</p>
+          <p id="console">Consoles</p>
         </div>
         <div class="mostrar-mais">
-          <p>Ver Tudo <img src="assets\img\Vector.png" alt="seta" /></p>
+          <p>Ver Tudo <img src="assets\img\seta.svg" alt="seta" /></p>
         </div>
       </div>
       <section class="sessao-produtos">
@@ -180,7 +182,7 @@
           <p>Diversos</p>
         </div>
         <div class="mostrar-mais">
-          <p>Ver Tudo <img src="assets\img\Vector.png" alt="seta" /></p>
+          <p>Ver Tudo <img src="assets\img\seta.svg" alt="seta" /></p>
         </div>
       </div>
 
