--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
     <section class="contato">
       <div class="referencia">
         <img src="assets\img\logo.svg" alt="logo" />
-        <p class="referencia__p1">Alura</p>
-        <p class="referencia__p2">Geek</p>
+        <p class="referencia__p1">Geek</p>
+        <p class="referencia__p2">Store</p>
       </div>
       <div class="links-uteis">
         <a href="">Quem somos nós</a>
