finalização aba login

--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--CSS INDEX-->
+    <link rel="stylesheet" href="./assets/css/css-base/reset.css">
+    <link rel="stylesheet" href="./assets/css/css-base/base.css">
+    <link rel="stylesheet" href="./assets/css/css-index/cabecalho.css">
+    <link rel="stylesheet" href="./assets/css/css-index/destaque.css">
+    <link rel="stylesheet" href="./assets/css/css-index/geral-prods.css">
+    <link rel="stylesheet" href="./assets/css/css-index/contato.css">
+    <link rel="stylesheet" href="./assets/css/css-index/footer.css">
+    <!--FIM CSS INDEX-->
 
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/cabecalho.css">
-    <link rel="stylesheet" href="./assets/css/destaque.css">
-    <link rel="stylesheet" href="./assets/css/geral-prods.css">
-    <link rel="stylesheet" href="./assets/css/contato.css">
-    <link rel="stylesheet" href="./assets/css/footer.css">
     <title>GeekStore</title>
   </head>
 
   <body>
     <header class="cabecalho">
       <nav class="menu">
-        <div class="logo-busca">
+        <a href="./index.html" class="logo-busca">
             <img src="assets\img\logo.svg" alt="logo" />
             <p class="logo-azul">Geek</p>
             <p>Store</p>
-        </div>
+        </a>
         <!--logo-busca-->
 
         <div class="buscador">
@@ -36,7 +38,7 @@
         <!--bucador-->
 
         <div class="login">
-          <a href="login.html">
+          <a href="assets/html/login.html">
             <button type="submit">Login</button>
           </a>
         </div>
@@ -255,7 +257,7 @@
         <p class="referencia__p1">Geek</p>
         <p class="referencia__p2">Store</p>
       </div>
-      
+
       <div class="links-uteis">
         <a href="">Quem somos nós</a>
         <a href="">Politica de Privacidade</a>
